--- a/style.css
+++ b/style.css
@@ -16,19 +16,9 @@ body
     background-size: cover;
 }
 
-.div_speed
+.div_name_img
 {
-    float: left;
-}
-
-.div_volume
-{
-    float: right;
-}
-
-.div_img
-{
-    width: 200px;
+    height: 50px;
     border-radius: 100px;
 }
 
@@ -38,14 +28,9 @@ body
     margin: 15px;
 }
 
-.play_button
-{
-    width: 130px;
-    font-size: 25px;
-}
-
 canvas
 {
+    margin-top: 50px;
     border: 5px solid white;
     border-radius: 20px;
 }
