--- a/style.css
+++ b/style.css
@@ -16,9 +16,19 @@ body
     background-size: cover;
 }
 
-.div_name_img
+.div_speed
 {
-    height: 50px;
+    float: left;
+}
+
+.div_volume
+{
+    float: right;
+}
+
+.div_img
+{
+    width: 200px;
     border-radius: 100px;
 }
 
@@ -28,9 +38,14 @@ body
     margin: 15px;
 }
 
+.play_button
+{
+    width: 130px;
+    font-size: 25px;
+}
+
 canvas
 {
-    margin-top: 50px;
     border: 5px solid white;
     border-radius: 20px;
 }
